fixed spacing on entire page

--- a/styles/ireland.css
+++ b/styles/ireland.css
@@ -11,7 +11,7 @@ body {
     background-attachment: fixed;
 }
 .bodyContent {
-    background-color:rgba(255,255,255,0.4);
+    background-color:rgba(255, 255, 255, 0.4);
 }
 
 .headerImage {
@@ -47,20 +47,24 @@ body {
     width: 100px;
     height: 30px;
     background: green;
+    background-color: green;
+    border: solid orange;
     border-radius: 10px;
     color: white;
-    padding-left: 18px;
-    padding-top: 2px;
+    padding-left: 15px;
 }
 .irelandText {
     display: flex;
     justify-content: center;
     font-size: 5em;
     text-shadow: 2px 2px #ffffff;
+    padding-top: 40px;
 }
 .mainLogo {
     display: flex;
     justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .listOfInfo {
@@ -96,8 +100,8 @@ body {
     justify-content: center;
     background-color: rgba(255,255,255,0.2);
     border-color: black;
-    padding-top: 250px;
-    padding-bottom: 50px;
+    padding-top: 100px;
     padding-left: 500px;
+    padding-bottom: 100px;
     padding-right: 500px;
 }
